--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
           <a href="#1"> Home</a>
           <a href="#2">Sobre Mim</a>
           <a href="#3">Conhecimento</a>
-          <a href="#">Certificados</a>
+          <a href="#4">Certificados</a>
+
+          <div class="Contatos">
+
+                <a class="Link" href="https://www.linkedin.com/in/heitor-zeferino-84b98316a/">
+                        <img src="img/linkedin-Photoroom.png">
+                </a>
+
+          </div>
 
        </div>
     </header>
@@ -89,6 +97,37 @@
 
 
             </div>
+
+       </div>
+
+       <div id="4" class="Certificados">
+        
+            <div class="Info">
+
+                <h1>Certifi<span class="Enfeite">cados</span></h1>
+
+            </div>
+
+            <div class="Painel">   
+
+                <a href="https://hermes.dio.me/certificates/DLNJEE1S.pdf"> 
+                    <img src="Certificados/Debugging.png">
+                </a>
+
+                <a href="https://hermes.dio.me/certificates/HEWWV2IV.pdf"> 
+                    <img src="Certificados/Banco_Digital.PNG">
+                </a>
+
+                <a href="https://www.dio.me/certificate/RBGNM1DJ/share"> 
+                    <img src="Certificados/Poo.PNG">
+                </a>
+
+                <a href="https://cursos.alura.com.br/immersion/certificate/34f5a78c-2cee-4f75-add6-099c1352216e"> 
+                    <img src="Certificados/Alura.PNG">
+                </a>
+
+            </div>  
+            
 
        </div>
 
