--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
                     de aprimorar meus conhecimentos na área de desenvolvimento, busco
                     oportunidade de aprender com profissionais da área.</p>
 
+                <span class="Enfeite">Formação</span> <p> Ensino-médio + técnico em informática, colégio Cotemig.</p>
+
             </div>
        </div>
 
