--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
                 <span class="Enfeite">Suporte técnico </span> <p>Avançado</p>
                 <span class="Enfeite">MySQL</span> <p>Intermediário</p>
                 <span class="Enfeite">C#</span> <p>Intermediário</p>
-                <span class="Enfeite">NET -</span> <p>Intermediário</p>    
-                <span class="Enfeite">Java -</span> <p>Básicp</p>    
+                <span class="Enfeite">.NET</span> <p>Intermediário</p>    
+                <span class="Enfeite">.Java</span> <p>Básico</p>    
 
 
             </div>
