--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <span class="Enfeite">MySQL</span> <p>Intermediário</p>
                 <span class="Enfeite">C#</span> <p>Intermediário</p>
                 <span class="Enfeite">.NET</span> <p>Intermediário</p>    
-                <span class="Enfeite">.Java</span> <p>Básico</p>    
+                <span class="Enfeite">Java</span> <p>Básico</p>    
 
 
             </div>
