--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 Rua montes claros - 740 Alvorada, Contagem.
             </p>
 
-            <p>(31)986888944</p>
+            <p>(31) 986888944</p>
 
           </div>
           
@@ -80,6 +80,12 @@
                     oportunidade de aprender com profissionais da área.</p>
 
                 <span class="Enfeite">Formação</span> <p> Ensino-médio + técnico em informática, colégio Cotemig.</p>
+
+                <span class="Enfeite">Experiência</span> <p>1 ano e oito meses estagiando na empresa ECM Projetos Industriais, na
+                    qual me encontro atualmente, atuo na área de suporte técnico, onde
+                    realizo atividades como manutenção de Hardware, suporte via helpdesk,
+                    instalação e configuração de softwares, além da formatação e
+                    configuração de computadores e configuração de impressoras.</p>
 
             </div>
        </div>
